GNOME Bugzilla – Bug 762893
splitmuxsink critical assertion when changing from null to ready
Last modified: 2016-04-20 13:54:50 UTC
If you create a splitmuxsink and change it to PLAYING. Then change its state to NULL and then again to PLAYING state. A critical assertion occurs: CRITICAL **: create_sink: assertion 'splitmux->active_sink == NULL' failed The causing line I think is this one in create_sink function g_return_val_if_fail (splitmux->active_sink == NULL, TRUE); This just means that the sink was already created I have tested it and it works despite the critical message.
Created attachment 322714 [details] [review] splitmuxsink: only try to create internal sink if it doesn't exist Thanks for reporting, this patch should fix it. It will likely be merged after the release freeze is over.
A small unit test addition for this would be nice as well :)
Went to write an unit test for splitmuxsink and it seems to remove its pads when going to NULL. I guess this is another bug...
Nevermind, I was doing something wrong. commit d738fa0787c1eb77be1e304ea225433cf0db0414 Author: Thiago Santos <thiagoss@osg.samsung.com> Date: Mon Feb 29 23:40:03 2016 -0300 splitmuxsink: only try to create internal sink if it doesn't exist This allows splitmuxsink to be reused after being put to NULL. Test included https://bugzilla.gnome.org/show_bug.cgi?id=762893 I guess this is safe to go into 1.8.1?
I think so too, yes
Merged to 1.8 commit a5ea83799bcdf4a619ef88f943919b1413a5b660 Author: Thiago Santos <thiagoss@osg.samsung.com> Date: Mon Feb 29 23:40:03 2016 -0300 splitmuxsink: only try to create internal sink if it doesn't exist This allows splitmuxsink to be reused after being put to NULL. Test included https://bugzilla.gnome.org/show_bug.cgi?id=762893