splitmuxsink: only try to create internal sink if it doesn't exist

This allows splitmuxsink to be reused after being put to NULL.

Test included

https://bugzilla.gnome.org/show_bug.cgi?id=762893